<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="nowUserName"
            type="String" />
        <variable
            name="loginBean"
            type="com.suzhou.concept.bean.LoginBean" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/standard_title" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/big_interval"
            android:contentDescription="@string/todo" />

        <TextView
            style="@style/login_style"
            android:gravity="center"
            android:text="@{nowUserName}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/login_style"
            android:gravity="center"
            android:text="@string/safekeeping"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/login_style"
            android:gravity="center"
            android:textSize="20sp"
            android:text="@string/safe_verify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/login_style"
            android:gravity="center"
            android:text="@string/identity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <LinearLayout
            android:id="@+id/password_input_modify_username"
            style="@style/Widget.Magic.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            app:errorEnabled="true"
            app:passwordToggleEnabled="true"
            app:startIconDrawable="@drawable/password">
            <!--        6-12-->
            <EditText
                android:id="@+id/password_modify_username"
                style="@style/login_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:maxLines="1"
                android:hint="@string/hint_password"
                android:text="@={loginBean.password}"/>
        </LinearLayout>
        <Button
            android:id="@+id/verify_password"
            style="@style/login_style"
            android:text="@string/verify"
            android:background="@color/theme"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/forgot_modify_username"
            style="@style/login_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/forgot_password"
            android:textColor="@color/purple_700"
            android:textStyle="bold" />
    </LinearLayout>
</layout>