<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="register"
            type="com.suzhou.concept.bean.RegisterBean" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <include layout="@layout/standard_title"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/big_interval"
            android:contentDescription="@string/todo" />

        <LinearLayout
            android:id="@+id/phone_text_input"
            style="@style/Widget.Magic.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            app:startIconDrawable="@drawable/phone">

            <EditText
                style="@style/login_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:maxLines="1"
                android:hint="@string/input_phone"
                android:text="@={register.phone}" />
        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                style="@style/Widget.Magic.TextInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toRightOf="@id/guideline5">

                <EditText
                    style="@style/login_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLines="1"
                    android:hint="@string/input_verify"
                    android:text="@={register.verifyCode}" />
            </LinearLayout>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.45" />
            <Button
                android:id="@+id/request_verify"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/shape_corner_theme_10dp"
                android:textColor="@color/white"
                android:text="@string/get_verify"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="@id/guideline5"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_width="0dp"
                android:layout_height="0dp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <Button
            style="@style/login_style"
            android:id="@+id/next"
            android:background="@color/theme"
            android:textColor="@color/white"
            android:backgroundTint="@color/gray"
            android:text="@string/next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <RelativeLayout
            style="@style/login_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <CheckBox
                android:checked="@={register.agree}"
                android:id="@+id/read_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true" />

            <TextView
                android:id="@+id/read_agree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/read_check"
                android:text="@string/read_agree" />
        </RelativeLayout>
        <TextView
            style="@style/login_style"
            android:textColor="@color/purple_700"
            android:textStyle="bold"
            android:id="@+id/web_register"
            android:text="@string/web_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</layout>