<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="login"
            type="com.suzhou.concept.bean.LoginBean" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/standard_title" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/big_interval"
            android:contentDescription="@string/todo" />

        <LinearLayout
            android:id="@+id/username_register"
            style="@style/Widget.Magic.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp">

            <EditText
                style="@style/login_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1"
                android:hint="@string/hint_username_input"
                android:text="@={login.username}"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/password_register"
            style="@style/Widget.Magic.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            app:passwordToggleEnabled="true">

            <EditText
                style="@style/login_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:maxLines="1"
                android:hint="@string/hint_password"
                android:text="@={login.password}"/>
        </LinearLayout>

        <TextView
            style="@style/login_style"
            android:gravity="center"
            android:text="@string/input_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/submit_register"
            style="@style/login_style"
            android:background="@color/theme"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/smssdk_submit"
            android:backgroundTint="@color/gray" />
    </LinearLayout>
</layout>