<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="question"
            type="String" />
    </data>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/multiple_empty"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/empty_data"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/multiple_question"
            style="@style/QuestionStyle"
            android:text="@{question}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <com.google.android.material.tabs.TabLayout
            app:tabMode="scrollable"
            app:tabIndicatorFullWidth="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/select_item"/>
        <ScrollView
            android:id="@+id/multiple_input"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <RadioGroup
                    android:layout_margin="@dimen/standard_interval"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/question_options"/>
            </androidx.appcompat.widget.LinearLayoutCompat>
        </ScrollView>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/multiple_operate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/standard_interval">
            <Button
                android:id="@+id/verify_result"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:background="@color/theme"
                android:textColor="@color/white"
                android:layout_height="wrap_content"
                android:text="@string/verify_result"
                app:cornerRadius="20sp" />
            <Button
                android:id="@+id/redo"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/redo"
                android:textColor="@color/white"
                android:background="@color/theme"
                app:cornerRadius="20sp"/>

            <Button
                android:textColor="@color/white"
                android:id="@+id/submit_test_record"
                android:text="@string/submit"
                app:cornerRadius="20sp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:background="@color/theme"
                android:layout_height="wrap_content"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>