<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="accuracy"
            type="Integer" />
        <variable
            name="completed"
            type="Integer" />
    </data>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <include layout="@layout/standard_title"/>
        <com.google.android.exoplayer2.ui.PlayerView
            android:id="@+id/pre_view_player"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            app:controller_layout_id="@layout/exoplayer_control_view"/>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="vertical"
            android:gravity="center_horizontal">
            <TextView
                android:layout_margin="@dimen/standard_interval"
                android:textStyle="bold"
                android:textColor="@color/theme"
                android:text="@string/like_over_speaking"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_margin="@dimen/standard_interval"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">
                <TextView
                    android:text="@string/accuracy_percent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <ProgressBar
                    android:progress="@{accuracy}"
                    android:max="100"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content" />
                <TextView
                    android:text="@{String.valueOf(accuracy)}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </androidx.appcompat.widget.LinearLayoutCompat>
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_margin="@dimen/standard_interval"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">
                <TextView
                    android:text="@string/completed_percent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <ProgressBar
                    android:progress="@{completed}"
                    android:max="100"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content" />
                <TextView
                    android:text="@{String.valueOf(completed)}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </androidx.appcompat.widget.LinearLayoutCompat>
            <Button
                android:layout_margin="@dimen/standard_interval"
                android:id="@+id/release_share"
                android:text="发布配音内容"
                android:background="@drawable/shape_corner_theme_10dp"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:textStyle="bold"
                android:textColor="@color/theme"
                android:id="@+id/return_speaking"
                android:layout_margin="@dimen/standard_interval"
                android:text="@string/return_speaking_main"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
        <Button
            android:id="@+id/return_change"
            android:layout_margin="@dimen/short_interval"
            android:background="@drawable/shape_corner_theme_10dp"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/return_and_change"/>
    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>